   Enable plugin compilation when cross-compiling.
 * src/msgwindow.c:
   Fix missing NULL checks when reading the colour value of compiler
   output messages.
 * src/main.c, src/win32.c, src/win32.h:
   On Windows, change the working directory to the Geany installation
   path at startup to avoid unwanted directory locking(closes #2626124).
 * src/encoding.c:
   Fix broken selection of "Document->Set Encoding" menu items.
 * src/document.c, tagmanager/include/tm_source_file.h,
   tagmanager/include/tm_work_object.h, tagmanager/tm_project.c,
   tagmanager/tm_source_file.c, tagmanager/tm_tag.c,
   tagmanager/tm_work_object.c, tagmanager/tm_workspace.c:
   Don't let the tagmanager automatically reparse files if they
   seem to be changed on disk (affects all files in the current session,
   not the current one). This should speed up file saving a little bit,
   especially with remote files.
   Remove now unnecessary calls to tm_workspace_update().


2009-02-20  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>

 * src/editor.c: Set cursor for LaTeX at auto closing of environment
   direct into area.


2009-02-19  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * src/utils.h:
   Add missing header include (closes #2615808).


2009-02-18  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * src/symbols.c:
   Fix a possible crash when comparing symbol names
   (could be related to Ubuntu bug #147151).
   Fix broken symbol list tooltips when tag names contain ampersands.


2009-02-15  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * plugins/makefile.win32:
   Don't build Split Window plugin on Windows (doesn't work).


2009-02-15  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * ChangeLog, Makefile.am: Rotate ChangeLog.
 * configure.in, geany.nsi, geany_private.rc, win32-config.h,
   wscript, doc/geany.txt, doc/geany.html, src/geany.h:
   Post-release version bump.


*** See ChangeLog.pre-0-17 for earlier changes ***